@@ -2,6 +2,7 @@
 News
 ****
 
+- NEW: @var in procedure header declaration marks variables used by the procedure
 - NEW: Report error when assigning a value to const, type, or in register
 - NEW: Report error on duplicit declaration
 - NEW: Call procedures and macros with scoped name (pmg.init)
